<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.1</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>com.nttdata.services</groupId>
  <artifactId>trivia-service</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>trivia-service</name>
  <description>Demo project for Spring Boot</description>
  <properties>
    <java.version>21</java.version>
    <exclusion.spotbugs>./spotbugs-exclude-filter.xml</exclusion.spotbugs>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-mongodb</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
      <version>1.6.2</version>
    </dependency>

  </dependencies>

  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </path>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>1.6.2</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>build-info</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <excludes>
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>report</id>
            <phase>test</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>0.8.13</version>
      </plugin>
      <plugin>
        <artifactId>maven-site-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>4.0.0-M16</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <failIfNoTests>true</failIfNoTests>
          <properties>
            <property>
              <name>listener</name>
              <value>org.sonar.java.jacoco.JUnitListener</value>
            </property>
          </properties>
          <reportsDirectory>${project.basedir}/target/surefire-reports</reportsDirectory>
          <skipExec>false</skipExec>
          <skipTests>false</skipTests>
          <testFailureIgnore>false</testFailureIgnore>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.5.3</version>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
            </goals>
            <id>default-integration-test</id>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.5.3</version>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <outputDirectory>${project.build.directory}</outputDirectory>
              <resources>
                <resource>
                  <directory>${project.basedir}</directory>
                  <filtering>true</filtering>
                  <includes>
                    <include>manifest.yml*</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <id>copy-manifest</id>
            <phase>validate</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.3.1</version>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <id>development</id>
      <reporting>
        <plugins>
          <plugin>
            <artifactId>maven-site-plugin</artifactId>
            <groupId>org.apache.maven.plugins</groupId>
            <version>4.0.0-M16</version>
          </plugin>
          <plugin>
            <artifactId>maven-project-info-reports-plugin</artifactId>
            <groupId>org.apache.maven.plugins</groupId>
            <reportSets>
              <reportSet>
                <reports>
                  <report>scm</report>
                </reports>
              </reportSet>
            </reportSets>
            <version>3.9.0</version>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <version>3.6.0</version>
            <configuration>
              <configLocation>google_checks.xml</configLocation>
              <excludes>**/mappers/QuestionMapperImpl.java</excludes>
            </configuration>
            <reportSets>
              <reportSet>
                <reports>
                  <report>checkstyle</report>
                </reports>
              </reportSet>
            </reportSets>
          </plugin>
          <plugin>
            <artifactId>maven-pmd-plugin</artifactId>
            <groupId>org.apache.maven.plugins</groupId>
            <version>3.26.0</version>
          </plugin>
          <plugin>
            <artifactId>spotbugs-maven-plugin</artifactId>
            <configuration>
              <effort>Max</effort>
              <threshold>Max</threshold>
              <excludeFilterFiles>${exclusion.spotbugs}</excludeFilterFiles>
            </configuration>
            <groupId>com.github.spotbugs</groupId>
            <version>4.9.3.0</version>
          </plugin>
          <plugin>
            <artifactId>jacoco-maven-plugin</artifactId>
            <configuration>
              <destFile>target/jacoco.exec</destFile>
              <excludes>
                <exclude>**/TriviaServiceApplication.class</exclude>
              </excludes>
              <rules>
                <rule>
                  <element>PACKAGE</element>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <minimum>0.90</minimum>
                      <value>COVEREDRATIO</value>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
            <groupId>org.jacoco</groupId>
            <reportSets>
              <reportSet>
                <reports>
                  <report>report</report>
                </reports>
              </reportSet>
            </reportSets>
            <version>0.8.13</version>
          </plugin>
        </plugins>
      </reporting>
    </profile>
  </profiles>

</project>
